--- a/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Sockethead Test Site</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/flatly.bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/prism/prism.css" rel="stylesheet" />
 </head>
