--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Dashboard.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Dashboard.cshtml
@@ -1,6 +1,8 @@
 ﻿
 <ul>
     <li><a href='BasicUsage'>Basic Usage</a></li>
+    <li><a href='ColumnSelection'>Column Selection</a></li>
+    <li><a href='Ajax'>Ajax</a></li>
     <li><a href='Sample1'>Sample1</a></li>
     <li><a href='Sample2'>Sample2</a></li>
     <li><a href='RowModifier'>Row Modifier</a></li>
