--- a/Sockethead.Razor/Views/_ViewImports.cshtml
+++ b/Sockethead.Razor/Views/_ViewImports.cshtml
@@ -1,1 +1,2 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Sockethead.Razor.Helpers;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
