--- a/Sockethead.Web/Areas/Samples/Views/TwoColumnGrid/TwoColumnGrid.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/TwoColumnGrid/TwoColumnGrid.cshtml
@@ -22,9 +22,71 @@
         </div>
     </div>
 
+    <hr />
+
+    <h4>Row Processor</h4>
+    <div class="row">
+        <div class="col-md-6">
+            @(Html
+            .TwoColumnGrid()
+            .Add(movie)
+            .AddRowProcessor(kvp =>
+            {
+                if (kvp.Key == "Name")
+                    return new KeyValuePair<string, string>();
+
+                return new KeyValuePair<string, string>(kvp.Key, kvp.Value.ToUpper());
+            })
+            .Render())
+        </div>
+        <div class="col-md-6">
+<pre><code>@@(Html
+    .TwoColumnGrid()
+    .Add(movie)
+    .AddRowProcessor(kvp =>
+    {
+        if (kvp.Key == "Name")
+            return new KeyValuePair<string, string>();
+
+        return new KeyValuePair<string, string>(kvp.Key, kvp.Value.ToUpper());
+    })
+    .Render()))
+</code></pre>
+        </div>
+    </div>
+
 
     <hr />
-    <h4>Adding Rows</h4>
+
+
+    <h4>Add Specific Rows from Model</h4>
+
+    <div class="row">
+        <div class="col-md-6">
+
+            @(Html
+            .TwoColumnGrid()
+            .Add(movie, builder => builder
+                .Add(model => model.Name)
+                .Add(model => model.Genre)
+                .Add(model => model.Director))
+            .Render())
+
+        </div>
+        <div class="col-md-6">
+            <pre><code>@@(Html
+    .TwoColumnGrid()
+    .Add(movie, builder => builder
+        .Add(model => model.Name)
+        .Add(model => model.Genre)
+        .Add(model => model.Director))
+    .Render())
+</code></pre>
+        </div>
+    </div>
+
+    <hr />
+    <h4>Add Arbitrary Rows</h4>
 
     <div class="row">
         <div class="col-md-6">
@@ -160,6 +222,62 @@
             TwoColumnGridStyle.DescriptionList;
     })
     .Add(movie)
+    .RenderAsync())
+</code></pre>
+        </div>
+
+    </div>
+
+    <hr />
+
+    <h4>Embed TwoColumnGrid</h4>
+
+    <div class="row">
+        <div class="col-md-6">
+            @(await Html
+            .TwoColumnGrid()
+            .Add(movie)
+            .AddTwoColumnGrid(
+                label: "Embedded TwoColumnGrid",
+                gridBuilder: grid => grid.Add(movie))
+            .RenderAsync())
+        </div>
+        <div class="col-md-6">
+<pre><code>@@(await Html
+    .TwoColumnGrid()
+    .Add(movie)
+    .AddTwoColumnGrid(
+        label: "Embedded TwoColumnGrid",
+        gridBuilder: grid => grid.Add(movie))
+    .RenderAsync())
+</code></pre>
+        </div>
+
+    </div>
+
+    <hr />
+
+    <h4>Embed SimpleGrid</h4>
+
+    <div class="row">
+        <div class="col-md-6">
+            @(await Html
+            .TwoColumnGrid()
+            .Add(movie)
+            .AddSimpleGrid(
+                label: "Embedded SimpleGrid",
+                model: Model.Take(3),
+                gridBuilder: grid => grid.AddColumnsFromModel())
+            .RenderAsync())
+        </div>
+        <div class="col-md-6">
+<pre><code>@@(await Html
+    .TwoColumnGrid()
+    .Add(movie)
+    .AddSimpleGrid(
+        label: "Embedded SimpleGrid", 
+        model: Model.Take(3), 
+        gridBuilder: grid => grid.AddColumnsFromModel())
     .RenderAsync())
 </code></pre>
         </div>
