--- a/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Sockethead Test Site</title>
+    <title>@ViewData["Title"] - Sockethead Demo</title>
     <link rel="stylesheet" href="~/css/flatly.bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link href="~/prism/prism.css" rel="stylesheet" />
@@ -13,18 +13,18 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" href='/Samples/Home/Dashboard'>Sockethead Test Site</a>
+                <a class="navbar-brand" href='/Samples/Home/Dashboard'>Sockethead Demo Site</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Users" asp-action="Index">Users</a>
-                        </li>
+                        </li>*@
                     </ul>
-                    <partial name="_LoginPartial" />
+                    @*<partial name="_LoginPartial" />*@
                 </div>
             </div>
         </nav>
