--- a/Sockethead.Web/Areas/Samples/Views/_ViewImports.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Sockethead.Web.Data.Entities;
 @using Sockethead.Razor.Grid;
+@using Sockethead.Web.Areas.Samples.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
