--- a/Sockethead.Web/Areas/Samples/Views/Home/Dashboard.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Home/Dashboard.cshtml
@@ -1,5 +1,5 @@
 ﻿@{ 
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Welcome!";
 
     IQueryable<SocketheadRazorFeature> features = new List<SocketheadRazorFeature>
     {
