--- a/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/Shared/_SocketheadLayout.cshtml
@@ -10,8 +10,8 @@
     <link href="~/prism/prism.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header style="padding-bottom:80px;">
+        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-dark bg-primary border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" href='/Samples/Home/Dashboard'>Sockethead Demo Site</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
