--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Template - Copy.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Template - Copy.cshtml
@@ -6,17 +6,12 @@
 @(await Html
     .SimpleGrid(Model.Take(3))
     .AddColumnsFromModel()
-    .NoHeaders()
     .RenderAsync())
 
     </div>
 
     <div class="col-6">
-        <pre><code>@@(await Html
-    .SimpleGrid(Model.Take(3))
-    .AddColumnsFromModel()
-    .NoHeaders()
-    .RenderAsync())</code></pre>
+        <pre><code></code></pre>
 
     </div>
 
