--- a/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Enum.cshtml
+++ b/Sockethead.Web/Areas/Samples/Views/SimpleGrid/Enum.cshtml
@@ -1,12 +1,15 @@
-﻿@{ 
-    var enums = new[] { 0, 1, 2, 3 }
+﻿@{
+    var Model = new[] { 0, 1, 2, 3 }
         .Select(i => new SampleModel { SampleEnum = (SampleEnum)i })
         .ToList()
         .AsQueryable();
 }
 
+<div class="row">
+    <div class="col-md-6">
+
 @(await Html
-    .SimpleGrid(enums)
+    .SimpleGrid(Model)
 
     .AddColumn(column => column
         .DisplayAs(model => (int)model.SampleEnum)
@@ -25,15 +28,72 @@
         .Header("Expression"))
 
     .AddColumn(column => column
-        .DisplayHtmlContent(model => 
-            Html.DisplayFor(modelQueryable => model.SampleEnum))
+        .DisplayHtmlContent(model =>
+            Html.DisplayFor(query => model.SampleEnum))
         .Header("HtmlContent"))
 
     .RenderAsync()
 )
 
-<div>
+    </div>
+    <div class="col-md-6">
 
-<pre><code></code></pre>
+        <h4>Grid</h4>
 
+<pre><code>@@(await Html
+    .SimpleGrid(Model)
+
+    .AddColumn(column => column
+        .DisplayAs(model => (int)model.SampleEnum)
+        .Header("int"))
+
+    .AddColumn(column => column
+        .DisplayAs(model => model.SampleEnum)
+        .Header("DisplayAs"))
+
+    .AddColumn(col => col
+        .For(model => model.SampleEnum)
+        .Header("For"))
+
+    .AddColumn(column => column
+        .DisplayExpression(model => model.SampleEnum)
+        .Header("Expression"))
+
+    .AddColumn(column => column
+        .DisplayHtmlContent(model =>
+            Html.DisplayFor(query => model.SampleEnum))
+        .Header("HtmlContent"))
+
+    .RenderAsync()
+)</code></pre>
+
+        <br />
+
+        <h4>Enum</h4>
+
+        <pre><code>public enum SampleEnum
+{
+    [Display(Name = "Zilch")]
+    Zero, 
+        
+    One, 
+        
+    Two,
+}</code></pre>
+
+        <br />
+
+        <h4>Model</h4>
+
+        <pre><code> var Model = new[] { 0, 1, 2, 3 }
+    .Select(i => new SampleModel 
+    { 
+        SampleEnum = (SampleEnum)i 
+    })
+    .ToList()
+    .AsQueryable();</code></pre>
+
+        <p></p>
+
+    </div>
 </div>
